fix mobile headers overflow

--- a/src/shared/components/LanguageSelector/mobile/styles.scss
+++ b/src/shared/components/LanguageSelector/mobile/styles.scss
@@ -5,5 +5,6 @@
 }
 
 .lang-close {
+  display: none !important;
   height: 0;
 }
