--- a/src/shared/components/Menu/mobile/styles.scss
+++ b/src/shared/components/Menu/mobile/styles.scss
@@ -5,5 +5,6 @@
 }
 
 .menu-close {
+  display: none !important;
   height: 0;
 }
